--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CFLAGS=-O3 -g -pg 
-LDFLAGS=-lphidget21 -lopencv_core -lopencv_video -lopencv_highgui -lopencv_imgproc -lopencv_calib3d -lopencv_features2d
+LDFLAGS=-lphidget21 -lopencv_core -lopencv_video -lopencv_highgui -lopencv_imgproc -lopencv_calib3d -lopencv_features2d -lopencv_nonfree
 SOURCES=Main.cpp Robot.cpp Vision.cpp Controller.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=Robot
